[package]
name = "bbutnerv3-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
dotenv = "0.15.0"
env_logger = "0.9.0"
rocket = { version = "0.5.0-rc.2", features = ["tls"] }
rspotify = { version = "0.11.5", features = ["env-file" ] }
serde = "1.0.137"
serde_json = "1.0.81"